src/objects/Funzionalita__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Disable_Integrazione__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Integrazione</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_InvioEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Invio Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_ProcessBuilder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Process Builder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_ValidationRules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Validation Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Workflow</label>
        <type>Checkbox</type>
    </fields>
    <label>Funzionalità</label>
</CustomObject>